// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ZipCodeField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="text_zip"
      >
        Kod pocztowy
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="Kod pocztowy"
          name="text_zip"
          placeholder="Kod pocztowy"
          value="50600"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="testId"
  label="Kod pocztowy"
  name="text_zip"
  placeholder="Kod pocztowy"
  value=""
/>
`;

exports[`<ZipCodeField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="text_zip"
      >
        Zip Code*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="Zip Code"
          name="text_zip"
          placeholder="Kod pocztowy*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="text_zip"
      >
        ZipCode
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="testId"
          label="ZipCode"
          name="text_zip"
          placeholder="Kod pocztowy"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
